# package-cpp-dll

./: CMakeLists.txt  README.md
cmake/: dependency.cmake  fooConfig.cmake.in  package.cmake
include/: foo.h
src/: CMakeLists.txt  foo.cpp
tests/: CMakeLists.txt  foo_test.cpp
